try to add a layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,9 @@
 <head>
 <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 </head>
-</ody>
+<body>
+<div id="main" role="main" class="container">
+  {{ content }}
+</div>
 </body>
 </html>
