add the missing quote

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-        <a href="/" class="menu_ots_logo>OpenTechSchool</a>
+        <a href="/" class="menu_ots_logo">OpenTechSchool</a>
     </header>
 <div id="main" role="main" class="container">
   {{ content }}
