spaces for the css indent

--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
 a.menu_ots_logo {
   font-size: 2em;
-￼ margin: 0 3px 0 0.5em;
-￼ background: #085987;
-￼ color: #fff;
-￼ padding: 8px 13px;
+  margin: 0 3px 0 0.5em;
+  background: #085987;
+  color: #fff;
+  padding: 8px 13px;
   text-decoration: none;
   text-indent: 100%;
   white-space: nowrap;
