filling the content and using a grid layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,20 @@
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
 </head>
 <body>
-	<header>
+	<div id="logo">
         <a href="/" class="menu_ots_logo">OpenTechSchool</a>
-    </header>
-<div id="main" role="main" class="container">
+        <a href="/" class="menu_ots_chapter">Zürich</a>
+    </div>
+	<div id="social">
+    <a href="https://www.meetup.com/opentechschool-zurich"><img src="images/meetup-m-small.png"></a>
+	</div>
+    <main>
   {{ content }}
-</div>
+    </main>
+    </aside>
+    <h2>Upcoming events</h2>
+    test
+    </aside>
+    <script src="js/meetup.js"></script>
 </body>
 </html>
