get the meetups list to work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,21 @@
     <main>
   {{ content }}
     </main>
-    </aside>
-    <h2>Upcoming events</h2>
-    test
+    <aside>
+		<h2>Upcoming events</h2>
+        <!--
+        <div class="event">
+          <div class="date">
+            <span class="day">28</span>
+            <span class="month">aug</span>
+          </div>
+          <div class="description">
+            <p class="date_time">Tue, Aug 28, 2018, 19:00</p>
+            <p class="title">Learning C++ as a beginner</p>
+          </div>
+        </div>
+        -->
+		<div id="meetupEvents"></div>
     </aside>
     <script src="js/meetup.js"></script>
 </body>
