a first real post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <a href="/" class="menu_ots_chapter">Zürich</a>
     </div>
 	<div id="social">
-    <a href="https://www.meetup.com/opentechschool-zurich"><img src="images/meetup-m-small.png"></a>
+    <a href="https://www.meetup.com/opentechschool-zurich"><img src="{{ site.baseurl }}/images/meetup-m-small.png"></a>
 	</div>
     <main>
   {{ content }}
@@ -31,6 +31,6 @@
         -->
 		<div id="meetupEvents"></div>
     </aside>
-    <script src="js/meetup.js"></script>
+    <script src="{{ site.baseurl }}/js/meetup.js"></script>
 </body>
 </html>
