--- a/css/style.scss
+++ b/css/style.scss
@@ -31,6 +31,7 @@
 
   main {
     padding-left:15px;
+    padding-right:15px;
   }
 }
 
@@ -127,4 +128,8 @@ div.event > .description > .title
   font-size:12pt;
   margin-top:0px;
   margin-bottom:0px;
+}
+
+.entry img {
+    max-width:100%;
 }
